# bcn-rainfall-webapp

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: coveragepy.yml  mypy.yml  ruff.yml
bcn_rainfall_webapp/: __init__.py  app.py  config.py
bcn_rainfall_webapp/api/: __init__.py  app.py  query_parameters.py  schemas.py  utils.py
bcn_rainfall_webapp/api/routers/: __init__.py  csv.py  graph.py  rainfall.py  year.py
bcn_rainfall_webapp/api/routes/: __init__.py  csv.py  graph.py  rainfall.py  year.py
bcn_rainfall_webapp/api/utils/: __init__.py  errors.py  schemas.py
bcn_rainfall_webapp/db/: __init__.py  client.py  utils.py
bcn_rainfall_webapp/static/: package-lock.json  package.json
bcn_rainfall_webapp/static/css/: style.css
bcn_rainfall_webapp/static/js/: main.js  main.ts  tsconfig.json  utils.js  utils.ts
bcn_rainfall_webapp/templates/: index.html  layout.html
bcn_rainfall_webapp/templates/includes/: footer.html  header.html
bcn_rainfall_webapp/templates/sections/: rainfall_average.html  rainfall_by_year.html  rainfall_relative_distance_to_normal.html  rainfall_standard_deviation.html  years_above_normal.html  years_compared_to_normal.html
bcn_rainfall_webapp/utils/: __init__.py  base_config.py  graph.py  schemas.py
bcn_rainfall_webapp/views/: __init__.py  navbar.py  sections.py  utils.py
resources/: bcn_rainfall_1786_2024.csv
test/: test_app.py  test_config.py
test/api/: test_app.py  test_query_parameters.py  test_schemas.py  test_utils.py
test/api/utils/: test_errors.py
test/db/: test_client.py  test_utils.py
test/utils/: test_base_config.py  test_graph.py  test_schemas.py
test/views/: test_sections.py
