[project]
name = "bcn-rainfall-webapp"
version = "1.1.3"
description = "Webapp run with Flask to display in a user-friendly way rainfall data from the city of Barcelona, Catalunya."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcn-rainfall-core~=v1.0.7",
    "click~=8.1.7",
    "coverage>=7.6.9",
    "flask~=3.1.0",
    "flask-openapi3[swagger, scalar, redoc]~=4.2.1",
    "pandas~=2.2.2",
    "plotly~=5.24.1",
    "pre-commit~=4.0.1",
    "pydantic~=2.8.2",
    "pytest>=8.3.4",
    "pyyaml~=6.0.2",
    "redis~=6.2.0",
    "requests~=2.32.4",
    "waitress~=3.0.2",
    "werkzeug~=3.1.3",
]
authors = [{name = "Paul Charles", email = "paul.charles@tutanota.com"}]

